fix asset name too long not clip in inspector

--- a/elements/fire-inspector/importer-inspector.styl
+++ b/elements/fire-inspector/importer-inspector.styl
@@ -21,6 +21,10 @@
     fire-ui-toolbar {
         height: 20px
 
+        .asset-name {
+            overflow-x: hidden
+        }
+
         fire-ui-button {
             .fa-close {
                 color: #f00
